--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,44 @@
     font-family: 'Montserrat', sans-serif;
   }
 }
+
+
+/* 
+.top-bg{
+  background-image: url('./assets/image/bg-top.svg');
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 235px
+} */
+
+
+
+.hero-bg {
+  width: 100vw;
+  position: relative;
+  padding: 60px 0 0;
+  
+}
+
+.hero-bg:before {
+  content: '';
+  background: url('./assets/image/bg-top.svg');
+  width: 100vw;
+  height: 235px; 
+  background-size: cover;
+
+  position: absolute;
+  top: 60px;
+}
+
+.hero-bg:after {
+  content: '';
+  background: url('./assets/image/bg-bottom.svg');
+  width: 100vw;
+  height: 435px; 
+  background-size:cover;
+  position: absolute;
+  bottom: 0;
+}
